# ANO1

./: CMakeLists.txt  Etalons.cpp  Etalons.h  ImageObject.cpp  ImageObject.h  LICENSE  backprop.cpp  backprop.h  dataclear.txt  hog.cpp  kMeans.cpp  kMeans.h  main.cpp  ns_test.cpp
